--- a/css/st.css
+++ b/css/st.css
@@ -187,7 +187,7 @@ body.menu-open .icon-hamburger span:nth-child(3) {
   align-items: center;
   justify-content: center;
   background-size: cover;
-  background-position: center;
+  background-position: center 35%;
   color: white;
   text-align: center;
   position: relative;
